--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -116,8 +116,8 @@ a {
 header {
     width: 100%;
     height: 110vh;
-    background-image: url(../Images/banner/13.jpg);
-    background-position: center left;
+    background-image: url(../Images/banner/14.jpg);
+    background-position: top right;
     background-size: cover;
     position: relative;
 }
@@ -2541,6 +2541,18 @@ footer .footer-boxes .footer-first img {
     transition: all 0.6s ease;
 }
 
+.question .pa{
+    max-height: 0;
+    opacity: 0;
+    font-weight: 500;
+    text-transform: initial;
+    line-height: 1.5;
+    overflow: hidden;
+    margin: 0;
+    color: var(--color);
+    transition: all 0.6s ease;
+}
+
 .d-arrow {
     transition: transform 0.5s ease-in;
     color: #fff;
@@ -2549,9 +2561,15 @@ footer .footer-boxes .footer-first img {
 /*add this class when click*/
 
 .question p.show {
-    max-height: 600px;
+    max-height: 600px !important;
     opacity: 1;
     padding: 0px 15px 30px 15px;
+}
+
+.question .pa.show {
+    max-height: 600px !important;
+    opacity: 1;
+    padding: 10px 15px 30px 55px;
 }
 
 .rotate {
@@ -4075,7 +4093,7 @@ footer .footer-boxes .footer-first img {
     header {
         width: 100%;
         height: 100vh;
-        background-image: url(../Images/banner/13.jpg);
+        background-image: url(../Images/banner/banner-tab.jpg);
         background-position: top right;
         background-size: cover;
         position: relative;
@@ -4095,7 +4113,7 @@ footer .footer-boxes .footer-first img {
 
 
     .banner-section {
-        width: 95%;
+        width: 70%;
         height: auto;
         position: absolute;
         z-index: 2;
@@ -4245,6 +4263,27 @@ footer .footer-boxes .footer-first img {
         margin-bottom: 5%;
     }
 
+}
+
+@media screen and (max-width:425px) {
+    header {
+        width: 100%;
+        height: 100vh;
+        background-image: url(../Images/banner/banner-mobile.jpg);
+        background-position: center;
+        background-size: cover;
+        position: relative;
+    }
+    .banner-section {
+        width: 95%;
+        height: auto;
+        position: absolute;
+        z-index: 2;
+        top: 50%;
+        left: 0%;
+        transform: translate(-0%, -50%);
+        padding: 2%;
+    }
 }
 
 @media screen and (min-width:769px) and (max-width:991px) {
