--- a/assets/CSS/about.css
+++ b/assets/CSS/about.css
@@ -128,7 +128,7 @@ body {
 }
 
 .about-overlay-content p {
-    filter: 0 0 10px var((--white));
+    filter: 0 0 10px var((var(--light)));
 }
 
 .about-page-section .home-service-overlay,
@@ -143,7 +143,7 @@ body {
 }
 
 .about-page-content h5 {
-    color: var(--white);
+    color: var(--light);
     font-weight: 600;
 }
 
@@ -177,7 +177,7 @@ body {
 }
 
 .about-page-content ul li {
-    color: var(--white);
+    color: var(--light);
     margin-bottom: 2%;
 
 }
@@ -218,7 +218,7 @@ body {
 }
 
 .homeServices-container .homeServices-title h2 {
-    color: var(--white);
+    color: var(--light);
     font-weight: 700;
 }
 
@@ -246,7 +246,7 @@ body {
     background-size: cover;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     border-radius: 5px;
-    border: 1px solid var(--white);
+    border: 1px solid var(--light);
     overflow: hidden;
     z-index: 1;
     cursor: pointer;
@@ -259,7 +259,7 @@ body {
     height: 80px;
     padding: 3%;
     margin-bottom: 5%;
-    background-color: var(--white);
+    background-color: var(--light);
     border-radius: 50%;
     border: 1px solid var(--color);
     display: flex;
@@ -291,13 +291,13 @@ body {
 }
 
 .homeServices-container .homeSrvices-content .homeServices-boxs:hover h5 {
-    color: var(--white);
+    color: var(--light);
     position: relative;
     z-index: 1;
 }
 
 .homeServices-container .homeSrvices-content .homeServices-boxs:hover p {
-    color: var(--white);
+    color: var(--light);
     position: relative;
     z-index: 1;
 }
@@ -360,11 +360,11 @@ body {
 }
 
 .next-big-title h5{
-    color: var(--white);
+    color: var(--light);
 }
 
 .next-big-title h2{
-    color: var(--white);
+    color: var(--light);
 }
 .next-big-title h2 span{
     color: var(--color);
