--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -26,7 +26,7 @@ li::marker {
 :root {
     --color: #ed1943;
     --black: #161616;
-    --gray: gray;
+    --gray: rgb(206, 205, 205);
     --light-gray: rgb(227, 227, 227);
     --light: rgb(223, 255, 255);
     --white: #ffffff;
@@ -1789,7 +1789,7 @@ header {
 }
 
 .journy-section .journy-container h2 {
-    margin-bottom: 5%;
+    margin-bottom: 2%;
     font-weight: 900;
     color: var(--white);
 }
@@ -1875,7 +1875,7 @@ header {
     margin-top: 0%;
     width: 70%;
     text-align: start;
-    height: 600px;
+    height: 500px;
 }
 
 .tab-content p {
