--- a/assets/CSS/style.css
+++ b/assets/CSS/style.css
@@ -3069,6 +3069,13 @@ footer .footer-boxes .footer-first img {
     }
 }
 
+@media only screen and (min-width:250px){
+    .servc-c .servc-sngl-c .servc-sngl-txt-c p {
+        font-size: 12px;
+        text-align: center;
+        color: var(--black);
+    }
+}
 
 @media only screen and (max-width:1199px) {
 
@@ -3089,6 +3096,7 @@ footer .footer-boxes .footer-first img {
     .servc-c .servc-sngl-c .servc-sngl-txt-c p {
         font-size: 12px;
         text-align: center;
+        color: var(--black);
     }
 
     .servc-c .servc-sngl-c .servc-sngl-txt-c .sub-btm-serv-c ul li {
